<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TableLayout">

    <TableRow
        android:paddingTop="10dp"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_span="2"
            android:text="@string/login"
            android:textSize="25sp"
            android:textColor="@color/teal_200" />
    </TableRow>

    <TableRow
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/username"/>

        <EditText
            android:hint="@string/masukkan_username"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"/>

    </TableRow>

    <TableRow
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/password_input"/>

        <EditText
            android:hint="@string/masukkan_password"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"/>
    </TableRow>

    <TableRow
        android:gravity="center"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/btn_save"
            android:text="@string/submit"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:focusable="true"/>
    </TableRow>
</TableLayout>